--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -18,7 +18,7 @@ castle-objs   := castle_main.o castle_sysfs.o
 
 else
 
-KERNEL_DIR ?= /local/scratch/gmilos/Linux/linux-2.6.24
+KERNEL_DIR ?= /lib/modules/`uname -r`/build
 PWD        := $(shell pwd)
 
 castle.ko: clean $(castle-objs)
