--- a/user/scripts/Makefile
+++ b/user/scripts/Makefile
@@ -1,4 +1,5 @@
-SCRIPTS  = udev-watch
+UDEV_RULES  = udev-watch
+SBIN_SCRIPTS = create-dm.sh remove-all-dms.sh
 
 .PHONY: all
 all:
@@ -7,10 +8,13 @@ all:
 build:
 
 .PHONY: install
-install: $(SCRIPTS)
+install: $(UDEV_RULES) $()
 	mkdir -p /etc/castle
-	set -e; for rule in $(SCRIPTS); do \
+	set -e; for rule in $(UDEV_RULES); do \
 		install $$rule /etc/castle; \
+	done
+	set -e; for script in $(SBIN_SCRIPTS); do \
+		install $$script /usr/sbin; \
 	done
 
 .PHONY: clean
