Make into a library

--- a/user/ocaml/Makefile
+++ b/user/ocaml/Makefile
@@ -4,4 +4,6 @@ SOURCES = castle_ioctl_c.c castle_ioctl.ml
 RESULT  = castle_ioctl
 THREADS = yes
 
+all: native-code-library
+
 include $(OCAMLMAKEFILE)
