Makefile supports install now.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,6 +1,8 @@
 # Comment/uncomment the following line to disable/enable debugging
 #DEBUG = y
 
+all: castle.ko
+
 # Add your debugging flag (or not) to CFLAGS
 ifeq ($(DEBUG),y)
   DEBFLAGS = -O0 -g -DCASTLE_DEBUG # "-O" is needed to expand inlines
@@ -24,6 +26,10 @@ PWD        := $(shell pwd)
 castle.ko: clean $(castle-objs)
 	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) modules
 endif
+
+install:
+	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) modules_install
+	depmod -aq `uname -r` 
 
 clean:
 	rm -rf *.o *~ core .depend .*.cmd *.ko *.mod.c .tmp_versions Module.symvers
