Cleanup of the repo: renames from proto3, files added/removed.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,8 +1,6 @@
 # Comment/uncomment the following line to disable/enable debugging
 #DEBUG = y
 
-all: castle.ko
-
 # Add your debugging flag (or not) to CFLAGS
 ifeq ($(DEBUG),y)
   DEBFLAGS = -O0 -g -DCASTLE_DEBUG # "-O" is needed to expand inlines
@@ -13,22 +11,21 @@ endif
 EXTRA_CFLAGS += $(DEBFLAGS)
 EXTRA_CFLAGS += -I..
 
-ifneq ($(KERNELRELEASE),)
-# call from kernel build system
-obj-m         := castle.o
-castle-objs   := castle_main.o castle_sysfs.o
+TARGET = castle-fs
 
-else
+obj-m          := $(TARGET).o
+$(TARGET)-objs := castle_main.o castle_sysfs.o
 
 KVER       ?= 2.6.24
 KERNEL_DIR ?= /lib/modules/$(KVER)/build
 PWD        := $(shell pwd)
 
-castle.ko: clean $(castle-objs)
+$(TARGET).ko:
 	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) modules
-endif
 
-install: castle.ko
+all: $(TARGET).ko
+
+install: $(TARGET).ko
 	$(MAKE) -C $(KERNEL_DIR) M=$(PWD) modules_install
 	depmod -aq $(KVER)
 
