--- a/user/Makefile
+++ b/user/Makefile
@@ -1,7 +1,7 @@
 include Rules.mk
 
-SUBDIRS-y := scripts
-SUBDIRS-y += udev
+SUBDIRS-y := udev
+SUBDIRS-y += utils
 
 .PHONY: all clean install
 all clean install: %: subdirs-%
