--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -1,20 +1,21 @@
 # Comment/uncomment the following line to disable/enable debugging
-#DEBUG = y
+DEBUG = y
+
+TARGET = castle-fs
+
+obj-m          := $(TARGET).o
+$(TARGET)-objs := castle_main.o castle_cache.o castle_block.o castle_btree.o castle_versions.o castle_ctrl.o castle_sysfs.o
 
 # Add your debugging flag (or not) to CFLAGS
 ifeq ($(DEBUG),y)
   DEBFLAGS = -O0 -g -DCASTLE_DEBUG # "-O" is needed to expand inlines
+  $(TARGET)-objs += castle_debug.o
 else
   DEBFLAGS = -O0 -g
 endif
 
 EXTRA_CFLAGS += $(DEBFLAGS)
 EXTRA_CFLAGS += -I..
-
-TARGET = castle-fs
-
-obj-m          := $(TARGET).o
-$(TARGET)-objs := castle_main.o castle_cache.o castle_block.o castle_btree.o castle_versions.o castle_ctrl.o castle_sysfs.o
 
 KVER       ?= 2.6.24
 KERNEL_DIR ?= /lib/modules/$(KVER)/build
@@ -31,7 +32,7 @@ install: $(TARGET).ko
 	depmod -aq $(KVER)
 
 clean:
-	rm -rf *.o *~ core .depend .*.o. .*.cmd *.ko *.mod.c .tmp_versions Module.symvers
+	rm -rf *.o *~ core .depend .*.o.d .*.cmd *.ko *.mod.c .tmp_versions Module.symvers
 
 depend .depend dep:
 	$(CC) $(EXTRA_FLAGS) -M *.c > .depend
