Udev events, quick bug fix

--- a/user/udev/Makefile
+++ b/user/udev/Makefile
@@ -11,6 +11,7 @@ install: $(UDEV_RULES)
 	set -e; for rule in $(UDEV_RULES); do \
 		install $$rule /etc/udev/rules.d; \
 	done
+	install -D udev-watch /etc/castle/udev-watch
 
 .PHONY: clean
 clean:
