Quiet the makefile down (not to print the changeset out every make)

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -27,7 +27,7 @@ all: $(TARGET).ko
 # Make castle_compile.h PHONY, to get it refreshed every build
 .PHONY: castle_compile.h
 castle_compile.h:
-	echo "#define CASTLE_COMPILE_CHANGESET \"$(shell ((hg parents --template "{date|date} {rev}:{node|short}" >/dev/null && hg parents --template "{date|date} {rev}:{node|short}") || echo "unavailable") 2>/dev/null)\"" > castle_compile.h
+	@echo "#define CASTLE_COMPILE_CHANGESET \"$(shell ((hg parents --template "{date|date} {rev}:{node|short}" >/dev/null && hg parents --template "{date|date} {rev}:{node|short}") || echo "unavailable") 2>/dev/null)\"" > castle_compile.h
 
 .PHONY: $(TARGET).ko
 $(TARGET).ko: castle_compile.h
