A message added to the Makefile if .hg-rev cannot be found.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -27,6 +27,7 @@ all: $(TARGET).ko
 # Make castle_compile.h PHONY, to get it refreshed every build
 .PHONY: castle_compile.h
 castle_compile.h:
+	@if [ ! -e ../.hg-rev ]; then echo "\nCould not find hg revision number. Please add the following to your fs.hg/.hg/hgrc:\n[hooks]\nupdate = hg tip --template \"{date|date} {rev}:{node|short}\" > .hg-rev\ncommit = hg tip --template \"{date|date} {rev}:{node|short}\" > .hg-rev\n"; fi
 	@echo "#define CASTLE_COMPILE_CHANGESET \"$(shell (if [ -e ../.hg-rev ]; then cat ../.hg-rev; else echo "unavailable"; fi) 2>/dev/null)\"" > $@
 
 .PHONY: $(TARGET).ko
