Bhaskars freespace + extents.

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -5,7 +5,7 @@ PERF_DEBUG = y
 TARGET = castle-fs
 
 obj-m          := $(TARGET).o
-$(TARGET)-objs := castle_utils.o castle_main.o castle_cache.o castle_block.o castle_btree.o castle_freespace.o castle_versions.o castle_ctrl.o castle_sysfs.o castle_transfer.o castle_events.o castle_rxrpc.o castle_da.o castle_objects.o
+$(TARGET)-objs := castle_utils.o castle_main.o castle_cache.o castle_block.o castle_btree.o castle_freespace.o castle_versions.o castle_ctrl.o castle_sysfs.o castle_transfer.o castle_events.o castle_rxrpc.o castle_da.o castle_objects.o dev_extent.o dev_freespace.o dev_rda.o
 
 # Add your debugging flag (or not) to CFLAGS
 ifeq ($(DEBUG),y)
