castle_scan tool added to user/utils, usage explained below. Obsolete castle-fs-cli tool removed. castle_public.h put in sync with the primary copy.
Usage of castle_scan (loop0 is a valid FS disk, loop1 is unbound):
[root@shannon utils]# ./castle_scan loop1; echo $?
Invalid Disk Superblock: -1
255
[root@shannon utils]# ./castle_scan loop0; echo $?
0x3cc91ac0
0

--- a/user/utils/Makefile
+++ b/user/utils/Makefile
@@ -19,7 +19,7 @@ CFLAGS          += -g
 
 LIBS = -L/usr/lib$(LIB_POSTFIX)
 
-MAIN_OBJS  = castle-fs-cli 
+MAIN_OBJS  = castle_scan 
 
 ##
 ## "all" Target
