cleanup, rename castle_scan to castle-probe-device, and install

--- a/user/utils/Makefile
+++ b/user/utils/Makefile
@@ -19,7 +19,7 @@ CFLAGS          += -g
 
 LIBS = -L/usr/lib$(LIB_POSTFIX)
 
-MAIN_OBJS  = castle_scan 
+MAIN_OBJS  = castle_probe_device
 
 ##
 ## "all" Target
