--- a/user/utils/Makefile
+++ b/user/utils/Makefile
@@ -47,6 +47,7 @@ clean:
 .PHONY: install
 install: $(MAIN_OBJS)
 	install $(MAIN_OBJS) /usr/sbin
+	install -D castle /etc/rc.d/init.d/
 	install -D init-utils /usr/share/castle-fs/init-utils
 	install -D castle-fs-init.sh /usr/share/castle-fs/castle-fs-init
 	install -D castle-fs-fini.sh /usr/share/castle-fs/castle-fs-fini
