--- a/user/utils/Makefile
+++ b/user/utils/Makefile
@@ -55,6 +55,7 @@ install: all
 	install -D castle-fs-init.sh /usr/share/castle-fs/castle-fs-init
 	install -D castle-fs-fini.sh /usr/share/castle-fs/castle-fs-fini
 	install -D castle-scan /usr/sbin/castle-scan
+	install -D castle-claim-empty /usr/sbin/castle-claim-empty
 	install -D castle-create /usr/sbin/castle-create
 	install -D mkcastlefs /sbin/mkcastlefs
 	install -D castle_probe_device /usr/sbin/castle-probe-device
