Push correct trickery for getting gcc to not allow FP math

--- a/kernel/Makefile
+++ b/kernel/Makefile
@@ -25,6 +25,7 @@ endif
 
 EXTRA_CFLAGS += $(DEBFLAGS)
 EXTRA_CFLAGS += -I..
+EXTRA_CFLAGS += -msoft-float
 
 KVER       ?= $(shell uname -r)
 KERNEL_DIR ?= /lib/modules/$(KVER)/build
