--- a/user/utils/Makefile
+++ b/user/utils/Makefile
@@ -55,6 +55,8 @@ install: castle_probe_device mkcastlefs
 	install -D init-utils /usr/share/castle-fs/init-utils
 	install -D castle-fs-init.sh /usr/share/castle-fs/castle-fs-init
 	install -D castle-fs-fini.sh /usr/share/castle-fs/castle-fs-fini
+	install -D castle-smart-weigh-drive /usr/sbin/castle-smart-weigh-drive
+	install -D castle-smart-spank-drive /usr/sbin/castle-smart-spank-drive
 	install -D castle-scan /usr/sbin/castle-scan
 	install -D castle-claim-empty /usr/sbin/castle-claim-empty
 	install -D castle-create /usr/sbin/castle-create
